Address container HA review feedback